--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,4 +1,9 @@
 <div>
-  <h1 class="font-bold text-4xl">Static#index</h1>
-  <p>Find me in app/views/static/index.html.erb</p>
+  Cohort <span class="line-through">#1</span> #2
+</div>
+
+<div>
+  <% @campers.each do |camper| %>
+    <%= pp camper["name"] %>
+  <% end %>
 </div>
