--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,15 +1,17 @@
 <div class="flex flex-col justify-center items-center w-full min-h-screen">
-  <div class="text-3xl font-bold mb-6 group">Cohort <span class="group-hover:line-through group-hover:opacity-50">#1</span><span class="rotate-12 invisible inline-block group-hover:visible"> #2<span class="inline-block animate-spin">💩</span></span></div>
+  <div class="text-3xl font-bold mb-6 group">Cohort <span class="group-hover:line-through group-hover:opacity-50">#1</span><span class="rotate-12 invisible inline-block group-hover:visible animate-wiggle"> #2💩</span></div>
 
   <div class="grid gap-5 grid-cols-2 md:grid-cols-3 lg:grid-cols-4 ">
     <% @campers.each do |camper| %>
-      <div class="w-[220px]">
+      <div class="w-[260px]">
 
         <div class="relative border aspect-[1/1] bg-cover flex items-end" style="background-image:url(<%= asset_path "#{camper["name"]}.JPG" %>)">
           <div class="text-xl text-white font-bold bg-gradient-to-t px-2 py-1 from-black to-transparent w-full"><%= camper["name"] %><span class="font-medium text-base italic"><%= " aka #{camper['aka']}" if camper["aka"] %></span></div>
           <div class="opacity-0 hover:opacity-100 bg-accent absolute w-full h-full bg-cover flex flex-col items-center justify-end gap-3" style="background-image:url(<%= asset_path "#{camper["name"]}-alt.JPG" %>)">
             <% camper["stats"]&.each do |stat| %>
-              <p class="text-center <%= ['rotate-6', 'rotate-3', '-rotate-6', '-rotate-3', 'rotate-12', -'rotate-12'].sample %> mb-4 bg-white text-sm px-1"><%= stat %></p>
+              <div class="hover:opacity-10">
+                <p class="text-center <%= ['rotate-6', 'rotate-3', '-rotate-6', '-rotate-3', 'rotate-12', -'rotate-12'].sample %> mb-3 whitespace-nowrap hard-shadow bg-white text-sm px-1"><%= stat %></p>
+              </div>
             <% end %>
           </div>
         </div>
