--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,5 +1,5 @@
-<div class="flex flex-col justify-center items-center w-full min-h-screen">
-  <div class="text-3xl font-bold mb-6 group">Cohort <span class="group-hover:line-through group-hover:opacity-50">#1</span><span class="rotate-12 invisible inline-block group-hover:visible animate-wiggle"> #2💩</span></div>
+<div class="my-6 flex flex-col justify-center items-center w-full min-h-screen">
+  <div class="text-3xl font-bold mb-6 group">Cohort <span class="group-hover:line-through group-hover:opacity-50">#1</span><span class="text-4xl -ml-2 rotate-12 invisible inline-block group-hover:visible animate-wiggle"> #2💩</span></div>
 
   <div class="grid gap-5 grid-cols-2 md:grid-cols-3 lg:grid-cols-4 ">
     <% @campers.each do |camper| %>
