--- a/app/views/campers/show.html.erb
+++ b/app/views/campers/show.html.erb
@@ -1,7 +1,7 @@
 <div class="my-6 flex justify-center items-center w-full min-h-screen">
 
-  <div class="flex flex-wrap justify-center items-center gap-4">
-    <div class="w-[320px]">
+  <div class="flex flex-wrap justify-center items-start gap-8">
+    <div class="w-[360px]">
       <%= link_to "< Back", root_path, class: "btn-secondary mb-4" %>
       <div class="relative border aspect-[1/1] bg-cover flex items-end" style="background-image:url(<%= asset_path "#{@camper["name"]}.JPG" %>)">
         <div class="opacity-0 hover:opacity-100 bg-accent absolute w-full h-full bg-cover flex flex-col items-center justify-end gap-3" style="background-image:url(<%= asset_path "#{@camper["name"]}-alt.JPG" %>)">
@@ -12,19 +12,31 @@
           <% end %>
         </div>
       </div>
-    </div>
-    
-    <div>
-      <h1 class="font-bold text-4xl"><%= @camper.name %></h1>
+      <h1 class="font-bold text-4xl"><%= @camper.name %><span class="font-medium text-lg italic"><%= " aka #{@camper['aka']}" if @camper["aka"] %></span></h1>
       <h2 class="mt-4 uppercase text-xs">Working on: </h2>
       <p class="font-semibold text-2xl"><%= @camper.project %></p>
-      <p class="text-xl"><%= @camper.project_description %></p>
+      <p class="text-lg"><%= @camper.project_description %></p>
       <% if @camper.project_status == 'in progress' %>
         <div class="mt-1 flex items-center text-sm bg-gray-200 w-max p-1 pr-2 gap-1">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="animate-spin w-5 h-5"><path stroke-linecap="round" stroke-linejoin="round" d="M9.594 3.94c.09-.542.56-.94 1.11-.94h2.593c.55 0 1.02.398 1.11.94l.213 1.281c.063.374.313.686.645.87.074.04.147.083.22.127.324.196.72.257 1.075.124l1.217-.456a1.125 1.125 0 011.37.49l1.296 2.247a1.125 1.125 0 01-.26 1.431l-1.003.827c-.293.24-.438.613-.431.992a6.759 6.759 0 010 .255c-.007.378.138.75.43.99l1.005.828c.424.35.534.954.26 1.43l-1.298 2.247a1.125 1.125 0 01-1.369.491l-1.217-.456c-.355-.133-.75-.072-1.076.124a6.57 6.57 0 01-.22.128c-.331.183-.581.495-.644.869l-.213 1.28c-.09.543-.56.941-1.11.941h-2.594c-.55 0-1.02-.398-1.11-.94l-.213-1.281c-.062-.374-.312-.686-.644-.87a6.52 6.52 0 01-.22-.127c-.325-.196-.72-.257-1.076-.124l-1.217.456a1.125 1.125 0 01-1.369-.49l-1.297-2.247a1.125 1.125 0 01.26-1.431l1.004-.827c.292-.24.437-.613.43-.992a6.932 6.932 0 010-.255c.007-.378-.138-.75-.43-.99l-1.004-.828a1.125 1.125 0 01-.26-1.43l1.297-2.247a1.125 1.125 0 011.37-.491l1.216.456c.356.133.751.072 1.076-.124.072-.044.146-.087.22-.128.332-.183.582-.495.644-.869l.214-1.281z" /> <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" /></svg>
           <span>In progress</span>
         </div>
       <% end %>
+    </div>
+    
+    <div class="max-w-lg mb-2">
+      <div class="flex justify-between items-end mb-2">
+        <h2 class="text-xl font-semibold">Latest reports:</h2>
+        <%= link_to "New report", new_camper_report_path(camper_id:@camper), class: "btn-primary mb-2" %>
+      </div>
+      <div class="space-y-2 sm:max-h-[80vh] overflow-y-auto">
+        <%= render @camper.reports.most_recent %>
+        <div class="hidden only:block bg-gray-100 p-3">
+          <div class="text-center text-4xl">🦗</div>
+          <%= @camper.name %> hasn't posted any progress reports yet...<br> Someone should ask him what he's up to.
+        </div>
+      </div>
+
     </div>
   </div>
 </div>
