--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,7 +1,8 @@
 <div class="my-6 flex flex-col justify-center items-center w-full min-h-screen">
-  <div class="text-3xl font-bold mb-6 group">Cohort <span class="group-hover:line-through group-hover:opacity-50">#1</span><span class="text-4xl -ml-2 rotate-12 invisible inline-block group-hover:visible animate-wiggle"> #2💩</span></div>
+  <div class="text-3xl font-bold group">Cohort <span class="group-hover:line-through group-hover:opacity-50">#1</span><span class="absolute text-4xl -ml-4 rotate-12 invisible inline-block group-hover:visible animate-wiggle"> #2💩</span></div>
+  <div class="text-center mt-2">Camp ended <%= distance_of_time_in_words Date.current, Date.new(2023, 8, 27) %> ago... so have you been using what you learned?</div>
 
-  <div class="grid gap-5 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 ">
+  <div class="mt-5 grid gap-5 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 ">
     <% @campers.each do |camper| %>
       <%= link_to camper do %>
         <div class="w-[260px]">
