--- a/app/views/reports/new.html.erb
+++ b/app/views/reports/new.html.erb
@@ -1,7 +1,8 @@
-<div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">New report</h1>
-
-  <%= render "form", report: @report %>
-
-  <%= link_to 'Back', @camper, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+<div class="flex flex-col justify-center items-center w-full min-h-screen">
+  <div class="max-w-md">
+    <h1 class="font-bold text-4xl">New report</h1>
+    <%= turbo_frame_tag :new_report do %>
+      <%= render "form", report: @report %>
+    <% end %>
+  </div>
 </div>
