--- a/app/views/campers/show.html.erb
+++ b/app/views/campers/show.html.erb
@@ -1,7 +1,7 @@
 <div class="my-6 flex justify-center items-center w-full min-h-screen">
 
   <div class="flex gap-8 w-full max-w-4xl">
-    <div class="w-full">
+    <div class="max-w-[360px] w-full">
       <%= link_to "< Back", root_path, class: "btn-secondary mb-4" %>
       <div class="relative border aspect-[1/1] bg-cover flex items-end" style="background-image:url(<%= asset_path "#{@camper["name"]}.JPG" %>)">
         <div class="opacity-0 hover:opacity-100 bg-accent absolute w-full h-full bg-cover flex flex-col items-center justify-end gap-3" style="background-image:url(<%= asset_path "#{@camper["name"]}-alt.JPG" %>)">
