--- a/app/views/campers/show.html.erb
+++ b/app/views/campers/show.html.erb
@@ -3,7 +3,7 @@
   <div class="flex gap-8 w-full max-w-4xl">
     <div class="max-w-[360px] w-full">
       <%= link_to "< Back", root_path, class: "btn-secondary mb-4" %>
-      <div class="relative border aspect-[1/1] bg-cover flex items-end" style="background-image:url(<%= asset_path "#{@camper["name"]}.JPG" %>)">
+      <div class="mb-2 relative border aspect-[1/1] bg-cover flex items-end" style="background-image:url(<%= asset_path "#{@camper["name"]}.JPG" %>)">
         <div class="opacity-0 hover:opacity-100 bg-accent absolute w-full h-full bg-cover flex flex-col items-center justify-end gap-3" style="background-image:url(<%= asset_path "#{@camper["name"]}-alt.JPG" %>)">
           <% @camper["stats"]&.each do |stat| %>
             <div class="hover:opacity-10">
@@ -12,7 +12,9 @@
           <% end %>
         </div>
       </div>
-      <h1 class="font-bold text-4xl"><%= @camper.name %><span class="font-medium text-lg italic"><%= " aka #{@camper['aka']}" if @camper["aka"] %></span></h1>
+      <%= turbo_frame_tag :edit_camper do %>
+      <%= link_to "Edit", edit_camper_path(@camper), class: 'float-right' %>
+      <h1 class="font-bold text-4xl"><%= @camper.name %><span class="font-medium text-lg italic"><%= " aka #{@camper['aka']}" if @camper["aka"].present? %></span></h1>
       <h2 class="mt-4 uppercase text-xs">Working on: </h2>
       <p class="font-semibold text-2xl"><%= @camper.project %></p>
       <p class="text-lg"><%= @camper.project_description %></p>
@@ -22,6 +24,7 @@
           <span>In progress</span>
         </div>
       <% end %>
+    <% end %>
     </div>
 
     <div class="w-full">
