--- a/app/views/campers/show.html.erb
+++ b/app/views/campers/show.html.erb
@@ -1,6 +1,6 @@
-<div class="my-6 flex justify-center items-center w-full min-h-screen">
+<div class="p-2 my-6 flex justify-center items-center w-full min-h-screen">
 
-  <div class="flex gap-8 w-full max-w-4xl">
+  <div class="sm:flex gap-8 w-full max-w-4xl">
     <div class="max-w-[360px] w-full">
       <%= link_to "< Back", root_path, class: "btn-secondary mb-4" %>
       <div class="mb-2 relative border aspect-[1/1] bg-cover flex items-end" style="background-image:url(<%= asset_path "#{@camper["name"]}.JPG" %>)">
